_2009_06_11__09_16_34_ Chi-Hsiu Liang _2009_06_11__09_16_40_

  * Fixed IrreversibleExchangeReaction

2009-June-9 Struan Robertson

	* MESMER manual.doc: More tidying up.

2009-June-7 Struan Robertson

	* MESMER manual.doc: Addition of contracted basis set material.
	* HSO2_test.xml: Update test to use QM rotor.

_2009_06_02__11_11_27_ Chi-Hsiu Liang

  * Replaced isUnimolecular() and isIrreversible() check functions by getReactionType().

_2009_06_02__09_26_48_ Chi-Hsiu Liang

  * Enabled tunneling into unimolecular sink term.

_2009_06_01__10_58_13_ Chi-Hsiu Liang

  * Update manual
  * Add hydrogen atoms in the atom arrays of pentyl system. This is for checking the number of vibrational frequencies.
    In the meantime, if the user did not define the atomarray, this check is not performed.

2009-May-30 Struan Robertson

	* MESMER manual.doc: Correction to ILT formula.
	* QMRotor.cpp: Corrected and extended non-linear top density of states section.

2009-May-30 Struan Robertson

	* MESMER manual.doc: Review of theory section.

_2009_05_27__10_50_02_ Chi-Hsiu Liang

  * include #include <stdexcept> to remove the following error on Linux
      MesmerTools.cpp:64: `runtime_error' undeclared in namespace `std'

2009-May-18 Chris Morley

	* src/Reaction.cpp, src/Reaction.h,src/AssociationReaction.cpp,
	  src/MicroRate.cpp: add m_useILT to remove dependendence on 
	  MesmerILT plugin name. Pragmatic rather than elegant.
	  
	* src/MesmerTools.cpp,src/MolecularComponents.cpp,src/System.cpp:
	  replace exit(1)  by throw statements. Perhaps this
      will lead to a more complete mesmer.log after a crash.
      
	* src/MoleculeManager.cpp: add support for molecule aliases in 
	  librarymols.xml
	  
	* defaults.xml: add default for <A>
	* examples/AcetylO2/acetylO2.ck: replace acetyl_radical by acetyl
	* librarymols.xml: remove ketene and HO2 and add an alias example

	* Documentation/MESMER manual.doc:4.2.1 modified title and added bit on
	  aliases.
