@@ -1,3 +1,8 @@
+_2009_06_11__16_44_59_ Chi-Hsiu Liang
+
+  * fixed counter error in m_SpeciesSequence
+  * fixed irreversibleUnimolecularReaction sink term species profile with reservoir state in the isomer.
+
 _2009_06_11__09_16_34_ Chi-Hsiu Liang _2009_06_11__09_16_40_
 
   * Fixed IrreversibleExchangeReaction
